--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         </div>
             <% if user_signed_in? %>
                 
-            <div><a href="/users/<%= current_user.id %>/presentation/team" class="link_team">
+            <div><a href="/user/<%= current_user.id %>/presentation/team" class="link_team">
                 
             <% else %>
 
