--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -200,48 +200,137 @@ navbar {
     align-content: space-between;
     background-color: #141C2F;
 }
-
+.section_home {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+    padding-top: 25px;
+    background:url('../assets/giphy.gif');
+    background-size: cover;
+    background-position: center;
+    height: 550px;
+    position: relative;
+}
 .content-header {
     display: flex;
     align-items: center;
     justify-content: right;
     flex-direction: column;
-    padding-top: 300px;
+    padding-top: 200px;
 }
-
-.content-header h3 {
+.content-header h3  {
     font-family: serif;
-    color: #025FAE;
-    margin-left: 500px;
-    background-color: rgba(255, 255, 255, .8);
-    padding: 14px 25px 14px 25px;
-    box-shadow: 7px 3px 7px 0px #1665c1;
+    color:#ffff;
     display: flex;
-    transform: skew(-10deg, 0deg);
-}
-
+    font-size: 35px;
+    margin-left: 100px;
+    padding: 14px 25px 14px 25px;
+       background-color: rgba(80, 156, 216,.4);
+    border-radius: 0px 5px 75px 0px;
+     }
 .link_button {
-    margin-left: 500px;
     margin-top: 25px;
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
 }
+.ig {
+    display: flex;
+    width: 350px;
+    margin-top: 150px;
+}
 
 /* media queries */
+@media screen and (max-width: 1218px) {
+.ig {
+    display: flex;
+    width: 30%;
+}   
+.content-header h3 {
+    margin-left: 100px;
+     }
+.link_button {
+    margin-left: 100px;
+}
+.login_and_signup {
+    margin-left: 200px;
+}
+}
 @media screen and (max-width: 992px) {
-    .content-header h3 strong {
-        margin-left: 0px;
-    }
+.ig {
+display: flex;
+width: 30%;
+}
+.content-header h3 {
+    margin-left: 0px;
+     }
+.link_button {
+    margin-left: 0px;
+        
+}
+.login_and_signup {
+    margin-left: 0px;
+}
 
-    .link_button {
-        margin-left: 0px;
+}
+@media screen and (max-width: 778px) {
+.content-header {
+    padding-top: 0px;
+    width: 50%;
+}
+.content-header h3 {
+    margin-top: 300px;
+}
+.ig {
+display: flex;
+width: 30%;
+}
+}
+@media screen and (max-width: 578px) {
+    .ig {
+        display: flex;
+        width: 30%;
     }
-
+    .logo_number_two {
+    display: block;
+}
+.content-header {
+    padding-top: 0px;
+    width: 50%;
+}
+}
+.login_and_signup {
+    padding-top: 250px;
+    background: url('../assets/background-login.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 940px;
+    }
+    .login_page {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    flex-direction: column;
+}
+@media screen and (max-width: 1218px) {
     .login_and_signup {
-        margin-left: 0px;
+    margin-left: 0px;
+    padding-top:400px;
+}
+}
+@media screen and (max-width: 778px) {
+    .loginbox {
+        width: 90% !important;
     }
 }
+    .two_link input[type="checkbox"] {
+            width: 20px;
+    }
+    .link {
+    display: flex;
+  align-items: stretch;
+    }
+  /* end connexion */
 
 /* end media queries */
 .link_connexion {
