--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,5 +1,5 @@
 header {
-    background: url('lead.png') center no-repeat;
+    background: url('giphy.gif') center no-repeat;
     background-size: cover;
     width: 100%;
     height: 700px;
