--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="img col-md-6">
-            <%= image_tag 'user_show.gif', style: "width: 300px; height: 300px;" %>
+            <%= image_tag 'pierrot.gif', style: "width: 300px; height: 300px;" %>
         </div>
     </div>
 </div>
