--- a/app/assets/stylesheets/normalize.css
+++ b/app/assets/stylesheets/normalize.css
@@ -1,7 +1,7 @@
 body {
     /* background: url('The-Matrix-code-animated.gif') fixed ; */
-    /* background: url('1095591_pixel-gif-wallpaper.gif') fixed;
-    background-size: cover;*/
+     background: url('1095591_pixel-gif-wallpaper.gif') fixed;
+    background-size: cover;
 }
 
 div#flash {
