--- a/app/views/layouts/_loading.html.erb
+++ b/app/views/layouts/_loading.html.erb
@@ -1,1 +1,1 @@
-<div class="se-pre-con" style="" onclick="location.reload()"></div>
+<div class="se-pre-con" style="" onclick="location.reload()"><h1>Press any key to continue</h1></div>
