--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,6 +42,6 @@
         </div>
     </div>
 </header>
-<div class="links" style="text-align: center; background: black; opacity: .8;">
+<div class="links" style="text-align: center; background: white; opacity: 1;">
     <%= render "devise/shared/links" %>
 </div>
