--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,30 +1,56 @@
-<footer>
+<footer class="footer-distributed" >
     <button id="topbutton"><i></i></button>
-    <div class="footer_section">
-        <div class="contact">
-            <h4>Contactez nous :</h4>
-            <span>Téléphone : 034.67.430.55 <br>
-                Email : team5sayna4@gmail.com <br>
-            </span>
-        </div>
-        <div class="contact">
-            <h4>Suivez-nous sur : </h4>
-            <span style="word-spacing: 20px;"> 
-            	<a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-twitter"></i> </a>
-                <a href=""><i class="fa fa-linkedin"></i> </a>
-            </span>
-        </div>
-        <div class="contact">
-            <h4>A propos :</h4>
-            <span>Ce projet a été réalisé par une équipe<br>
-                de la promotion Sayna 4<br>
-            </span>
-        </div>
-    </div>
-    <hr class="trait">
-    <div class="copyright">© 2019 Copyright by Team 3 and Design by Tezitra</div>
-    <br><br>
+    <div class="footer-left">
+<img src="../assets/logo.png" class="logo_footer">
+                <h3>Learning<span> Game</span></h3>
+
+                <p class="footer-links">
+                    <a href="#">Acceuil</a>
+                    ·
+                    <a href="team.html">A propos</a>
+                    ·
+                    <a href="contact.html">Contact</a>
+                </p>
+
+                <p class="footer-company-name">As Team &copy; 2019</p>
+            </div>
+
+            <div class="footer-center">
+
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p><span>Faravohitra</span> Antananarivo, Madagascar</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>+26134 67 955 82</p>
+                </div>
+
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="mailto:yranjhars@gmail.com">yranjhars@gmail.com</a></p>
+                </div>
+
+            </div>
+
+            <div class="footer-right">
+
+                <p class="footer-company-about">
+                    <span>As team</span>
+                    Nous sommes un groupe de la promotion Warriors de Sayna 
+                </p>
+
+                <div class="footer-icons">
+
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+
+                </div>
+
+            </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
 
