--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -27,7 +27,7 @@
                 <i class="fas fa-check"></i>
                 <% elsif option.status == "Correct" %>
                 <strong><%= option.content %></strong>
-                <i class="far fa-hand-point-right"></i>
+                <i class="far fa-hand-point-left"></i>
                 <% elsif option.status == "Wrong_answer" %>
                 <strong><%= option.content %></strong>
                 <i class="fas fa-times"></i>
