--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -22,7 +22,7 @@
                 </td>
                 <td colspan="3">
                     <%= link_to new_student_test_doing_test_path(current_student.id, tst.id) do %>
-                        <i class="fas fa-play-circle"> Tester</i>
+                        <i class="fas fa-play-circle"> Commencer</i>
                     <% end %>
                 </td>
             </tr>
