--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="questions">
-            <div class="question1">
+            <div class="question">
                 <div class="questioncontent" style="">
                     <textarea name="content1" id="content1" placeholder="Quelle est la couleur du cheval blanc de Napoléon ?" style="" required=""></textarea>
                 </div>
