--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,7 +2,7 @@ header {
     background: url('giphy.gif') center no-repeat;
     background-size: cover;
     width: 100%;
-    height: 700px;
+    height: 800px;
 }
 
 section {
@@ -131,9 +131,11 @@ section {
 }
 
 .second_section div h3 {
-    margin-bottom: 70px;
+    margin-bottom: 40px;
     font-family: FreeMono, monospace;
-    font-size: 30px;
+    font-size: 50px;
+    text-shadow: 4px 4px 0px #39527f;
+    color: white;
 }
 
 /* end section  */
@@ -169,8 +171,10 @@ section {
 
 .student_section div {
     border: 1px solid white;
-    width: 300px;
+    width: 280px;
+    margin-right: 10px;
     height: 200px;
+    margin-bottom: 10px;
 }
 
 /* end of student section */
@@ -182,10 +186,11 @@ section {
 }
 
 .third_section h3 strong {
-    padding-bottom: 50px;
-    font-size: 30px;
-    color: rgba(9, 47, 154, 0.7);
+   margin-bottom: 40px;
     font-family: FreeMono, monospace;
+    font-size: 50px;
+    text-shadow: 4px 4px 0px #39527f;
+    color: white;
 }
 
 .teacher {
@@ -199,13 +204,12 @@ section {
     justify-content: center;
     display: flex;
     flex-direction: column;
-    margin-left: 25px;
     width: 300px;
     height: 450px;
 }
 
 .image_teacher {
-	background: url('prof_img.jpg');
+    background: url('prof_img.jpg');
     margin-left: 40px;
     width: 220px;
     height: 220px;
@@ -216,17 +220,19 @@ section {
 
 .commit_teacher,
 .commit_teacher_girl {
+    background-color: #337ab7;
     font-family: sans-serif;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 25px;
     width: 250px;
-    height: 150px;
-    border: 1px solid white;
+    height: 120px;
+    /* border: 1px solid white; */
     margin-left: 25px;
+    color: rgb(243, 242, 251);
 }
 
 .commit_teacher h4 {
-    color: #3A5199;
+    color: #ffff;
     font-family: serif;
     font-size: 23px;
 }
@@ -240,25 +246,29 @@ section {
 /*  end third_section */
 /* four_section  */
 .four_section h3 strong {
-    margin-top: 100px;
-    font-size: 30px;
-    color: rgba(9, 47, 154, 0.7);
+    margin-bottom: 40px;
     font-family: FreeMono, monospace;
+    font-size: 50px;
+    text-shadow: 4px 4px 0px #39527f;
+    color: white;
 }
 
-div.establishment {
+ .establishment {
+
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-div.establishment div {
-    margin-top: 3%;   
+ .establishment div {
+    margin-top: 10px;
     width: 150px;
-    margin-bottom: 3%;
     height: 150px;
+    margin-right: 15px;
 }
 
 .img_establishment {
-    margin-left: 150%;
+ 
     border-radius: 50%;
 }
 
@@ -281,8 +291,10 @@ div.establishment div {
     background-color: #3A5199;
 }
 .five_section div h3 {
-    font-size: 30px;
-    font-family:FreeMono, monospace;
+    margin-bottom: 40px;
+    font-family: FreeMono, monospace;
+    font-size: 50px;
+    text-shadow: 4px 4px 0px #39527f;
     color: white;
 }
 .trait_two {
