--- a/app/assets/stylesheets/students.css
+++ b/app/assets/stylesheets/students.css
@@ -9,8 +9,8 @@
     width: 100%;
 }
 #student_form select{
-    background:  0 0;
-    color: #141C2F
+    background: rgba(0, 0, 0, .5);
+    color: white;
 }
 /* FORM END */
 
