--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -45,7 +45,6 @@
 
 .student_profil .col-md-6 {
     width: 100%;
-    border: 1px solid red;
 }
 
 .student_profil .niveau {
@@ -114,6 +113,10 @@
 /* End Student */
 
 /* Start Teacher */
+
+select option {
+    background: rgba(0, 0, 0, 0.3);
+}
 a:focus,
 a:active {
     text-decoration: none;
@@ -248,6 +251,7 @@ select {
     font-family: 'Montserrat';
     font-weight: 500;
     font-size: 13px;
+    color:white;
 }
 
 input:focus,
@@ -500,3 +504,11 @@ input[type=submit]:hover {
 }
 
 /*Teacher End*/
+
+
+
+
+/* links */
+.links a:hover {
+    color: blue;
+}
