--- a/app/assets/stylesheets/teachers.css
+++ b/app/assets/stylesheets/teachers.css
@@ -14,8 +14,8 @@
     width: 100%;
 }
 #teacher_form select{
-    background:  0 0;
-    color: #141C2F
+    background: rgba(0, 0, 0, .5);
+    color: white;
 }
 /* FORM END */
 
