--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -88,12 +88,10 @@
         </div><br>
         <% if action_name == 'edit' %>
         <div>
+            <%= image_tag (current_user.avatar.attached? ? current_user.avatar : 'profile-2398782_960_720.png'), width: '100px', height: '100px' %>
+        </div>
+        <div>
             <h3>Changer la photo de profil</h3>
-            <div style="max-width: 100px; max-height: 100px;">
-                <% if current_user.avatar.present? %>
-                <%= image_tag (current_user.avatar), width: '100%', height: '100%' %>
-                <% end %>
-            </div><br>
             <%= f.file_field :avatar %>
             <%= f.hidden_field :avatar_cache %>
         </div><br>
