--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,35 +1,55 @@
-<center>
-    <div class="center" style="height: 100%; padding-top: 7%; padding-bottom: 7%; line-height: 2;">
-        <div class="profile">
-            <div class="profile-sidebar">
-                <div class="profile-usertitle">
-                    <% if current_user.avatar.attached? %>
-                    <%= image_tag current_user.avatar %>
-                    <% else %>
-                    <img src="../assets/prof.jpeg" class="" alt="">
-                    <% end %>
-                    <div class="profile-usertitle-name">
-                        <%= @teacher.first_name %>
-                        <%= @teacher.last_name %>
-                    </div>
-                </div>
-                <div class="profile-userbuttons">
-                    <a href="#" class="btn btn-dark"><i class="fas fa-user-edit">Editer profil</i></a>
-                    <a href="/teachers/<%= @teacher.id %>/tests/new" class="btn btn-outline-secondary"><i class="fas fa-notes-medical">Crée Un test</i></a>
+<div class="center" style="line-height: 2;">
+<!--     <div class="col-md-6">
+        <div class="">
+            <div class="">
+                <div class="">
+                    <%= @teacher.first_name %>
+                    <%= @teacher.last_name %>
                 </div>
             </div>
+            <div class="">
+                <a href="#" class="btn btn-dark"><i class="fas fa-user-edit"> Editer mon profil</i></a>
+                
+            </div>
         </div>
-        <div class="about_prof">
-            <table>
-                <tr>
-                    <td>Matière enseignée:</td>
-                    <td><%= @teacher.subject.title %></td>
-                </tr>
-                <tr>
-                    <td>Nombre de tests crées:</td>
-                    <td><%= @teacher.tests.length %></td>
-                </tr>
-            </table>
-        </div>
+    </div> -->
+    <div class="">
+        <table class="table" style="text-align: center;">
+            <tr>
+                <th class="table-primary" style="text-align: center;">
+                    <a href="/teachers/<%= @teacher.id %>/tests/new" class="btn btn-outline-success"><i class="fas fa-notes-medical"> Créer un nouveau test</i></a>
+                </th>
+            </tr>
+            <tr>
+                <th class="table-light">Matière enseignée:</th>
+                <td class="table-primary">
+                    <%= @teacher.subject.title %>
+                </td>
+            </tr>
+            <tr>
+                <th class="table-light">
+                    Nombre de tests crées:
+                </th>
+                <td class="table-primary">
+                    <%= @teacher.tests.length %>
+                </td>
+            </tr>
+            <tr>
+                <th class="table-light">
+                    Nombre de mes élèves:
+                </th>
+                <td class="table-primary">
+                    <%= my_students %>
+                </td>
+            </tr>
+            <tr>
+                <th class="table-light">
+                    Les élèves de mon établissement
+                </th>
+                <td class="table-primary">
+                    <%= current_teacher.students.length %>
+                </td>
+            </tr>
+        </table>
     </div>
-</center>
+</div>
