--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,4 +1,4 @@
-<title>FinalProject</title>
+<title>LearninGame</title>
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -21,4 +21,5 @@
 <link rel="stylesheet" type="text/css" href="../assets/style.css">
 <link rel="stylesheet" type="text/css" href="../assets/normalize.css">
 
+<!-- <link rel="stylesheet" type="text/css" href="../assets/responsive.css"> -->
 <!-- ======================================================= -->
