--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,7 +4,7 @@
             <tr>
                 <th colspan="3">Title</th>
                 <th colspan="3">Points à gagner</th>
-                <th colspan="3">Nombre de participant</th>
+                <th colspan="3">Nombre de participants</th>
                 <th colspan="3">Faire le test</th>
             </tr>
         </thead>
